--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,19 @@
     margin: 0;
     border: 0;
 }
+
+header{
+    padding: 3%;
+    margin: 0;
+    border: 0;
+    color: white;
+    background-image: linear-gradient(to right,lightblue, blue, darkblue) ;
+}
+
+h1{
+    padding: 0;
+    margin: 0;
+    border: 0;
+    float: left;
+    border-color: black;
+}
