--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,14 @@
-*{
-    padding: 0;
+/*{
     margin: 0;
+    padding: 0;
     border: 0;
-}
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}*/
 
+body{
+    background-color: dimgrey;
+}
 header{
     padding: 3%;
     margin: 0;
@@ -15,7 +20,22 @@ header{
 h1{
     padding: 0;
     margin: 0;
-    border: 0;
-    float: left;
-    border-color: black;
+}
+
+.card{
+width: 20%;
+background-color: white;
+}
+
+
+#weather{
+    float: right;
+    width: 75%;
+    box-sizing: content-box;
+}
+
+#weather h2{
+    color: white;
+    background-color: blue;
+    float:inline-end;
 }
